# uscryptoarb

./: .gitignore  CHANGELOG.md  CryptoArbitrage_V14.9.4_NoKeys.nb  LICENSE  PROJECT_INSTRUCTIONS.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: DECISION_LOG.md  LESSONS_LEARNED.md  MATHEMATICA_MAP.md  README.md  SESSION_HANDOFFS.md
fixtures/: coinbase_error_not_found.json  coinbase_product_book_btc_usd.json  coinbase_product_book_ltc_btc.json  coinbase_product_book_sol_btc.json  kraken_asset_pairs_btcusd.json  kraken_orderbook_response.json  kraken_ticker_response.json
notebooks/: 01_kraken_exploration.ipynb  02_coinbase_exploration.ipynb
src/uscryptoarb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/uscryptoarb/calculation/: __init__.py  arb_calc.py  fees.py  returns.py  sizing.py  types.py
src/uscryptoarb/config/: app_config.py
src/uscryptoarb/connectors/: __init__.py  base.py
src/uscryptoarb/connectors/coinbase/: __init__.py  client.py  parser.py  symbols.py
src/uscryptoarb/connectors/kraken/: __init__.py  client.py  parser.py  symbols.py
src/uscryptoarb/http/: backoff.py  rate_limiter.py
src/uscryptoarb/marketdata/: topofbook.py
src/uscryptoarb/markets/: pairs.py
src/uscryptoarb/misc/: decimals.py
src/uscryptoarb/strategy/: __init__.py  scanner.py  selection.py
src/uscryptoarb/validation/: __init__.py  guards.py
src/uscryptoarb/venues/: registry.py  symbols.py
tests/: conftest.py  test_backoff.py  test_decimals.py  test_pairs_and_symbols.py  test_registry_and_config.py  test_topofbook.py
tests/fixtures/: README.md  fee_schedules.json
tests/unit/test_calculation/: conftest.py  test_arb_calc.py  test_fees.py  test_returns.py  test_sizing.py
tests/unit/test_connectors/test_coinbase/: test_client.py  test_parser.py  (+1 more)
tests/unit/test_http/: test_rate_limiter.py
tests/unit/test_strategy/: __init__.py  conftest.py  test_scanner.py  test_selection.py
tests/unit/test_validation/: __init__.py  test_guards.py
(+3 files in other folders)
