[project]
name = "uscryptoarb"
version = "0.0.1"
description = "Cross-exchange, taker-only crypto arbitrage scanner (Phase 0/1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
