[project]
name = "uscryptoarb"
version = "0.0.1"
description = "Cross-exchange, taker-only crypto arbitrage scanner (Phase 0/1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "mypy>=1.11",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
